# bazi

./: README.md  bazi-web.py  bazi.py
backend/: app.py  bazi.db  environement.yaml  pyproject.toml  requirements.txt
frontend/: .env  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App copy.jsx  App.jsx  setupProxy.js
frontend/src/components/: BaziCalculator.jsx  LoginForm.jsx  Navbar.jsx  RegisterForm.jsx  SavedCharts.jsx
frontend/src/services/: api.js
frontend/src/utils/: auth.js
templates/: index.html
