[project]
name = "bazi-system"
version = "1.0.0"
description = "The bazi calculartion project"
readme = "README.md"
requires-python = ">=3.13,<4.0"
keywords = ["bazi"]
authors = [{ name = "ca team" }]
dependencies = [
    "blinker (==1.9.0)",
    "click (==8.1.8)",
    "flask (==3.1.2)",
    "flask-cors (==6.0.1)",
    "flask-jwt-extended (==4.7.1)",
    "flask-sqlalchemy (==3.1.1)",
    "greenlet (==3.2.4)",
    "importlib-metadata (==8.7.0)",
    "itsdangerous (==2.2.0)",
    "jinja2 (==3.1.6)",
    "markupsafe (==3.0.3)",
    "pyjwt (==2.10.1)",
    "sqlalchemy (==2.0.43)",
    "typing-extensions (==4.15.0)",
    "werkzeug (==3.1.3)",
    "zipp (==3.23.0)"
]

[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
pytest = ">=8.4.2"
pytest-asyncio = ">=1.2.0"
pytest-cov = ">=7.0.0"
pytest-mock = ">=3.15.1"
pytest-repeat = ">=0.9.4"

[tool.poetry.group.check]
optional = true
[tool.poetry.group.check.dependencies]
pre-commit = ">=4.1.0"

[tool.poetry.group.misc]
optional = true
[tool.poetry.group.misc.dependencies]
polib = ">=1.2.0"

[project.urls]
homepage = "http://cabroker.ca/"
documentation = "http://cabroker.ca/docs"
repository = "http://192.168.1.213/comintern/bethune"
changelog = "http://192.168.1.213/comintern/bethune/-/blob/dev/CHANGELOG.md"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

